# SurfaceNormalPCL

./: CMakeLists.txt  README.md  data.txt  norm.txt  surface_normal.cpp  visual.cpp
