cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(MY_GRAND_PROJECT)
find_package(PCL 1.7 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(visual visual.cpp)
target_link_libraries(visual ${PCL_LIBRARIES} )
add_executable(surface_normal surface_normal.cpp)
target_link_libraries(surface_normal ${PCL_LIBRARIES} )
